Complete, for bug 760500.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105676 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ga-IE/snippets.lang
+++ b/ga-IE/snippets.lang
@@ -126,7 +126,7 @@ Sciobtha, sciobtha, sciobtha. <a %s>Fuair Firefox ar Android nuashonrú mór</a>
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Tá gnéithe nua i bhFirefox a chabhróidh leat cromadh ar thascanna nua níos sciobtha! <a href="%">Féach ar an bhfíseán chun tuilleadh eolais a fháil.</a>
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
