--- a/ga-IE/videos/video_fx13.lang
+++ b/ga-IE/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Gach Rud Nua i bhFirefox] Tá sé níos éasca ná riamh teacht ar an eolas atá uait leis an leagan is déanaí de Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Leis an dearadh nua ar an Leathanach Baile, beidh tú in ann teacht ar na roghanna a úsáideann tú is minice.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Mar shampla íosluchtuithe, leabharmharcanna, stair, breiseáin, sioncrónú, agus socruithe.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Leathanach Cluaisín Nua] D'fheabhsaigh muid an leathanach a thaispeántar le Cluaisín nua.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Leis an leathanach Cluaisín Nua, is féidir cuairt a dhéanamh ar na suímh is ansa leat le clic amháin.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Chun an leathanach Cluaisín Nua a úsáid, cruthaigh cluaisín nua trí '+' a chliceáil ag barr do bhrabhsálaí.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Taispeánfar mionphictiúir de na suímh is ansa leat ó do stair bhrabhsála sa leathanach Cluaisín Nua.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Is féidir leat leagan amach an leathanaigh Cluaisín Nua a athrú trí na mionphictiúir a tharraingt.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Cliceáil an biorán chun an suíomh a chur faoi ghlas, agus cliceáil an cnaipe 'X' chun suíomh a bhaint de.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Nó, cliceáil an deilbhín 'greille' ag barr an leathanaigh ar dheis chun filleadh ar an leathanach folamh sean-nóis.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Faigh an leagan is déanaí de Firefox anois agus bain tairbhe as na gnéithe nua seo inniu!
