--- a/ga-IE/whatsnew.lang
+++ b/ga-IE/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurá! Tá Firefox cothrom le dáta.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Tá Firefox as dáta.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Mar gheall ar chúrsaí slándála, molaimid duit <a href="{url}">an leagan is fearr is déanaí</a> a shuiteáil.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Tá leagan de Firefox agat nach bhfuil aithne againn air.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Mar gheall ar chúrsaí slándála, molaimid duit <a href="{url}">an leagan is fearr is déanaí</a> a íosluchtú.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Crom ar thascanna nua<br/>níos sciobtha
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Cabhróidh na gnéithe nua i bhFirefox leat teacht ar eolas ar an nGréasán níos sciobtha.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Tuilleadh eolais faoin ghné <a href="{url}">Cluaisín Nua »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Tuilleadh eolais faoin dearadh nua ar an <a href="{url}">leathanach baile »</a>
 
 
 ;Keep in touch
-Keep in touch
+Fan i dteagmháil
 
 
 ;Keep it moving
-Keep it moving
+Beir leat é
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Faigh Firefox » <b>ar Android</b>
 
 
 ;Keep it going
-Keep it going
+Beir bua
 
 
 ;Join Mozilla
-Join Mozilla
+Tacaigh le Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>. {ok}
 
 
