I missed the "Keep..." parallelism.  Irish is now even cuter.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105677 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ga-IE/whatsnew.lang
+++ b/ga-IE/whatsnew.lang
@@ -38,7 +38,7 @@ Tuilleadh eolais faoin dearadh nua ar an <a href="{url}">leathanach baile »</a>
 
 
 ;Keep in touch
-Fan i dteagmháil
+Beir beannacht uainn
 
 
 ;Keep it moving
