--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -126,6 +126,6 @@ Rapida, rapida, rapida. <a %s>Firefox por Android ĵus ricevis grandan ĝisdatig
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox havas novajn trajtojn por helpi vin aliri vian venontan taskon eĉ pli rapide! <a href="%">Spektu la filmeton por lerni pli pri tio.</a>
 
 
