--- a/eo/whatsnew.lang
+++ b/eo/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Bonege! Via Firefox estas aktuala.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Your Firefox ne estas aktuala.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Pro sekurecaj kialoj, ni rekomendas ĝisdatigi ĝis la <a href="{url}">lastan kaj plej bonan version</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Vi uzas nekonatan version de Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Pro sekurecaj kialoj, ni rekomendas elŝuti la <a href="{url}">lastan kaj plej bonan version</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Atingu vian celon<br/>pli rapide ol iam ajn
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Vidu kiel la novaj trajtoj en Firefox helpas vin retesplori pli rapide kaj efike.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Lernu pli pri <a href="{url}">la trajto Nova folio »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Lernu pli pri ni <a href="{url}">refasonita hejmpaĝo »</a>
 
 
 ;Keep in touch
-Keep in touch
+Restu en kontakto
 
 
 ;Keep it moving
-Keep it moving
+Kunmoviĝu
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Ricevu Firefox » <b>por Android</b>
 
 
 ;Keep it going
-Keep it going
+Pluvivigu
 
 
 ;Join Mozilla
-Join Mozilla
+Aliĝu al Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+La rotobo de Android estis produktita el verko kreita kaj <a href="%s">disponigita de Google</a> kaj ĝi estas uzata laŭ la kondiĉoj priskribitaj en la <a href="%s">Permesilo de atribuo 3.0 de Creative Commons</a>.
 
 
