--- a/eo/videos/video_fx13.lang
+++ b/eo/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Novaĵoj en Firefox] Atingi vian celon estas pli facile kaj rapide per la lasta Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+En la refasonita hejmpaĝo vi povas nun facile aliri kaj viziti viajn oftajn menuerojn.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Ekzemple: elŝutojn, legosignojn, historiojn, aldonaĵojn, speguladon kaj agordojn.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Paĝo en nova folio] Ni plibonigis ankaŭ la paĝon de nova folio.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+El la paĝo de nova folio vi povas nun facile viziti viajn lastajn kaj oftajn retejojn per unu klako.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Por ekuzi la novan paĝon de folio, kreu novan folion perk alklako de '+' ĉe la supro de via retesplorilo.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La paĝo de nova folio montros nun bildetojn de viaj lastaj kaj oftaj retejoj el historio de la Mirinda strio.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Vi povas agordi vian paĝon de nova folio per ŝovado de la bildetoj, por ŝanĝi la ordon.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Alklaku la pinglilon por fiksi la retejon aŭ la butonon 'X' por forigi ĝin.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Vi povas ankaŭ alkalki la 'krado' simbolon, supre kaj dekstre en la paĝo, por reiri al malplena paĝo de nova folio.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Ricevu la lastan Firefox nun kaj ekuzu tiujn novajn trajtojn tuj!
