--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -10,7 +10,7 @@ Nun ke vi havas la lastan version, <a href="%s">vidu ĉion kion vi povas fari</a
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-Vi ne havas la lastan version de Firefox. <a href="%s">Ĝisdatigu ĝin hodiaŭ</a> por eltiri la plej bonajn aferojn el la TTT!
+Vi ne havas la lastan version de Firefox. <a href="%s">Ĝisdatigu ĝin hodiaŭ</a> por eltiri la plej bonajn aferojn el la Teksaĵo!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
