Bug 760488 - [eo] Translate Whats New page for Firefox 13 + vido
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105689 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/eo/whatsnew.lang
+++ b/eo/whatsnew.lang
@@ -30,7 +30,7 @@ Vidu kiel la novaj trajtoj en Firefox helpas vin retesplori pli rapide kaj efike
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Lernu pli pri <a href="{url}">la trajto Nova folio »</a>
+Lernu pli pri <a href="{url}">la "Nova folio" trajto »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
