[it] Update .lang files (mainly bug 760511)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105691 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/newsletter.lang
+++ b/it/newsletter.lang
@@ -178,18 +178,18 @@ Ti ringraziamo per averci spiegato i motivi della tua decisione.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla Newsletter
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Grazie! Controlla la tua posta per confermare l'iscrizione.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Riceverai un'e-mail da mozilla@e.mozilla.org per confermare la tua iscrizione, se non trovi questo messaggio controlla i tuoi filtri antispam. Per ricevere la nostra newsletter devi prima confermare l'iscrizione.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Per avere la certezza di ricevere sempre i nostri messaggi, aggiungi alla rubrica l'indirizzo utilizzato per inviare la newsletter (mozilla@e.mozilla.org).
 
 
