--- a/it/snippets.lang
+++ b/it/snippets.lang
@@ -126,6 +126,6 @@ Veloce, veloce, veloce. <a %s>È disponibile una versione profondamente rinnovat
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox introduce nuove funzioni per rendere il tuo lavoro ancora più veloce. <a href="%">Guarda il video per scoprire le novità.</a>
 
 
