--- a/it/videos/video_fx13.lang
+++ b/it/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Novità di Firefox] Grazie al nuovo Firefox decidere dove andare non è mai stato così semplice e veloce.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Con la nuova pagina iniziale puoi accedere velocemente ai comandi più utilizzati.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Come download, segnalibri, cronologia, componenti aggiuntivi, sync e opzioni.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Pagina Nuova scheda] Abbiamo migliorato anche la pagina Nuova scheda.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Grazie alla pagina Nuova scheda puoi accedere con un solo clic ai siti web più visitati e più recenti.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Per iniziare a utilizzare la pagina Nuova scheda crea una nuova scheda facendo clic sul pulsante '+' nella parte superiore del browser.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La pagina Nuova scheda visualizzerà un'anteprima dei siti web più visitati e più recenti, in base alla cronologia della barra degli indirizzi.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Puoi personalizzare la pagina Nuova scheda trascinando le anteprime e modificandone l'ordine.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Fai clic sulla puntina per bloccare un sito in quella posizione o sulla 'X' per rimuoverlo.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Puoi anche fare clic sull'icona 'griglia' in alto a destra nella pagina per tornare alla vecchia pagina vuota per le nuove schede.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Installa subito l'ultima versione di Firefox e iniziare a utilizzare le nuove funzioni oggi stesso!
