--- a/it/whatsnew.lang
+++ b/it/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Urrà! Il tuo Firefox è aggiornato.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Il tuo Firefox non è aggiornato.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Per motivi di sicurezza ti consigliamo di aggiornare alla <a href="{url}">versione più recente</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Stai utilizzando una versione sconosciuta di Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Per motivi di sicurezza ti consigliamo di installare la <a href="{url}">versione più recente</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Passa all'attività successiva<br/>ancora più velocemente
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Scopri in che modo le nuove funzioni di Firefox possono rendere la tua navigazione più veloce ed efficiente.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Ulteriori informazioni sulla <a href="{url}">funzione Nuova scheda »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Ulteriori informazioni sulla <a href="{url}">nuova pagina iniziale »</a>
 
 
 ;Keep in touch
-Keep in touch
+Restiamo in contatto
 
 
 ;Keep it moving
-Keep it moving
+In movimento
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Scarica Firefox » <b>per Android</b>
 
 
 ;Keep it going
-Keep it going
+Non fermarti qui
 
 
 ;Join Mozilla
-Join Mozilla
+Entra in Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android Robot è stato riprodotto a partire da un lavoro creato e <a href="%s">condiviso da Google</a> e utilizzato rispettando i termini della <a href="%s">licenza Creative Commons 3.0 Attribution</a>.
 
 
