Bug 760553 - [zh-TW] Translate Whats New page for Firefox 13 + video
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105692 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-TW/whatsnew.lang
+++ b/zh-TW/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+您的 Firefox 已經更新完成，太棒了！
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+您的 Firefox 已經過時。
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+由於安全性因素，我們強烈建議您升級到 <a href="{url}">最新且最棒的版本</a>。
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+您正在執行未知的 Firefox 版本。
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+由於安全性因素，我們強烈建議您下載 <a href="{url}">最新且最棒的版本</a>。
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+讓您的工作<br/>比以前更快完成
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+看看 Firefox 的新功能可以如何幫您更快、更有效率地瀏覽網頁。
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+了解更多關於 <a href="{url}">新增分頁的功能 »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+了解更多關於 <a href="{url}">全新設計的首頁 »</a> 的資訊
 
 
 ;Keep in touch
-Keep in touch
+保持聯絡
 
 
 ;Keep it moving
-Keep it moving
+隨身帶著走
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+下載 <b>for Android</b> 版本的 Firefox »
 
 
 ;Keep it going
-Keep it going
+關注我們
 
 
 ;Join Mozilla
-Join Mozilla
+加入 Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android 機器人是取自 <a href="%s">Google 所創作並分享之著作</a>，依照 <a href="%s">創用 CC 姓名標示 3.0 授權條款</a> 使用。
 
 
