--- a/zh-TW/videos/video_fx13.lang
+++ b/zh-TW/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox 有什麼新鮮事] 透過最新的 Firefox，更快、更簡單就能完成想做的事。
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+透過重新設計過的首頁，您可以更簡單地存取您最常使用的選單項目。
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+像是下載、書籤、歷史記錄、附加元件、同步，以及設定。
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[新分頁頁面] 我們也改善了您的新分頁頁面。
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+透過新分頁頁面，您只要滑鼠一點就能簡單地開啟您最近且最常瀏覽的網站。
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+如果要開始使用新分頁頁面，請點下瀏覽器上方的「+」圖示來新增一個分頁標籤。
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+新分頁頁面將會顯示您的瀏覽記錄當中最近、最常瀏覽的網頁的縮圖圖示。
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+您可以透過拖放這些圖示來修改它們的排序，以自訂新分頁頁面。
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+點下圖示左上角的大頭針來鎖定網站，或是點下右上角的「X」來移除某個網站。
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+您也可以點下頁面右上角的網格圖示使用以往完全空白的新分頁頁面。
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+今天就下載最新版本的 Firefox，使用這些全新功能！
