[it] Update .lang files (fx13)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105693 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/whatsnew.lang
+++ b/it/whatsnew.lang
@@ -26,7 +26,7 @@ Passa all'attività successiva<br/>ancora più velocemente
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Scopri in che modo le nuove funzioni di Firefox possono rendere la tua navigazione più veloce ed efficiente.
+Scopri come le nuove funzioni di Firefox possono rendere la tua navigazione più veloce ed efficiente.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
