[it] Update .lang files (fx13 subtitles)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105694 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/videos/video_fx13.lang
+++ b/it/videos/video_fx13.lang
@@ -7,7 +7,7 @@ Con la nuova pagina iniziale puoi accedere velocemente ai comandi più utilizzat
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Come download, segnalibri, cronologia, componenti aggiuntivi, sync e opzioni.
+Come download, segnalibri, cronologia, componenti aggiuntivi, Sync e opzioni.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
@@ -39,4 +39,4 @@ Puoi anche fare clic sull'icona 'griglia' in alto a destra nella pagina per torn
 
 
 ;Get the latest Firefox now and start using these new features today!
-Installa subito l'ultima versione di Firefox e iniziare a utilizzare le nuove funzioni oggi stesso!
+Installa subito l'ultima versione di Firefox e inizia a utilizzare le nuove funzioni oggi stesso!
