Update strings in whatsnew.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105695 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-TW/whatsnew.lang
+++ b/zh-TW/whatsnew.lang
@@ -2,7 +2,7 @@
 
 
 ;Hooray! Your Firefox is up to date.
-您的 Firefox 已經更新完成，太棒了！
+您的 Firefox 已經完成更新，太棒了！
 
 
 ;Your Firefox is out of date.
@@ -22,7 +22,7 @@
 
 
 ;Get to your next task<br/>faster than ever
-讓您的工作<br/>比以前更快完成
+更快完成您的工作<br/>比以前更快完成
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
@@ -30,11 +30,11 @@
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-了解更多關於 <a href="{url}">新增分頁的功能 »</a>
+了解更多關於 <a href="{url}">新分頁頁面 »</a> 的資訊
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-了解更多關於 <a href="{url}">全新設計的首頁 »</a> 的資訊
+了解更多關於 <a href="{url}">新首頁設計 »</a> 的資訊
 
 
 ;Keep in touch
@@ -46,7 +46,7 @@
 
 
 ;Get Firefox » <b>for Android</b>
-下載 <b>for Android</b> 版本的 Firefox »
+下載 <b>Android</b> 版本的 Firefox »
 
 
 ;Keep it going
