translated video_fx13 into Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105697 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/videos/video_fx13.lang
+++ b/rm/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Tge è nov en Firefox] Ussa èsi anc pli simpel dad arrivar nua che ti vuls cun il pli nov Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Cun la pagina da partenza nova pos ti acceder e navigar a moda simpla las opziuns dal menu utilisadas il pli savens.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Sco las telechargiadas, ils segnapaginas, la cronologia, ils supplements, Sync e las preferenzas.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Pagina per novs tabs] Nus avain meglierà la pagina per novs tabs.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Cun la pagina per novs tabs pos ti navigar a moda fitg simpla a las paginas che has visità il pli savens u dacurt cun be in clic.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Per cumenzar dad utilisar la pagina per novs tabs, creescha in nov tab cun smatgar il '+' sura en tes navigatur.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La pagina per novs tabs vegn a mussar cun agid da la cronologia previstas da las paginas che ti has visità il pli savens u dacurt.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Ti pos persunalisar tia pagina da novs tabs cun trair las previstas per midar la successiun.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Clicca sin la guglia per fixar la pagina en quest lieu, u clicca il buttun 'x' per allontanar ina pagina.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Ti pos era cliccar sin l'icona 'griglia' sura dretg sin la pagina per turnar a la pagina vida.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Va per il pli nov Firefox e cumenza ad utilisar anc oz questas funcziuns!
