l10n:lij correction langfile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105698 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/whatsnew.lang
+++ b/lij/whatsnew.lang
@@ -10,7 +10,7 @@ O teu Firefox o no l'é agiornòu.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-Pe ragioìn de seguéssa, te consegémmo de agiornâte a <a href="{url}">l'ùrtima mêgio vesción</a>.
+Pe raxoìn de seguéssa, te consegémmo de agiornâte a <a href="{url}">l'ùrtima mêgio vesción</a>.
 
 
 ;You’re running an unknown version of Firefox.
@@ -18,15 +18,15 @@ Ti gh'æ 'na versción de Firefox che mi mîga a conóscio.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-Pe ragioìn de seguéssa, te consegémmo de descaregâ <a href="{url}">l'ùrtima mêgio vesción</a>.
+Pe raxoìn de seguéssa, te consegémmo de descaregâ <a href="{url}">l'ùrtima mêgio vesción</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Vànni a-o teu pròscimo travàggio<br/>ciù velôce che mâi
+Vànni a-a pròscima ativitæ<br/>ancón ciù velôce de prìmma
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Véddi cómme e nêuve caraterìstiche de Firefox te agiùtan a navegâ ciù velôce e inte 'n mòddo ciù eficiénte.
+Véddi cómme e nêuve fonçioìn de Firefox te fàn navegâ ciù velôce e inte 'n mòddo ciù eficiénte.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
@@ -42,7 +42,7 @@ Stànni in contàtto
 
 
 ;Keep it moving
-Pòrtilo deræ
+Pòrtilo derê
 
 
 ;Get Firefox » <b>for Android</b>
@@ -58,6 +58,6 @@ Unìscite a Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-O Android Robot o l'é stæto riprodûto da 'n travàggio creòu e <a href="%s">condivîzo da Google</a> e adêuviòu in acòrdo a-i tèrmini descrîti into <a href="%s">Creative Commons 3.0 Attribution License</a>.
+O Android Robot o l'é stæto riprodûto da 'n travàggio creòu e <a href="%s">condivîzo da Google</a> e adêuviòu in acòrdo a-i tèrmini descrîti inta <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
