Localize latest snippet
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105701 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/snippets.lang
+++ b/nl/snippets.lang
@@ -126,6 +126,6 @@ Snel, snel, snel. <a %s>Firefox voor Android heeft net een grote upgrade gehad</
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox bevat nieuwe functies die u nog sneller naar uw volgende taak brengen! <a href="%">Bekijk de video voor meer info.</a>
 
 
