[it] Update .lang files (QA e-mail->email)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105703 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/main.lang
+++ b/it/main.lang
@@ -263,7 +263,7 @@ Formato MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
-Oops! Assicurati di aver inserito un indirizzo e-mail valido.
+Oops! Assicurati di aver inserito un indirizzo email valido.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -271,7 +271,7 @@ Leggi l'informativa sulla privacy di Mozilla e accettane i termini selezionando 
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Inserisci il tuo indirizzo e-mail e consulta l'informativa sulla privacy di Mozilla.
+Inserisci il tuo indirizzo email e consulta l'informativa sulla privacy di Mozilla.
 
 
 ;Mobile
@@ -363,7 +363,7 @@ Firefox per dispositivi portatili
 
 
 ;Email
-E-mail
+email
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
