--- a/it/newsletter.lang
+++ b/it/newsletter.lang
@@ -6,7 +6,7 @@ Ricevi la newsletter mensile
 
 
 ;Your Email Address
-Il tuo indirizzo e-mail
+Il tuo indirizzo email
 
 
 ;Text
@@ -22,7 +22,7 @@ Scegli la nazione
 
 
 ;Whoops! Be sure to enter a valid email address.
-Oops! Verifica di aver inserito un indirizzo e-mail valido.
+Oops! Verifica di aver inserito un indirizzo email valido.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -54,7 +54,7 @@ Iscriviti agli aggiornamenti mensili con le ultime notizie dal mondo Mozilla, in
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Ti abbiamo inviato una e-mail di conferma. Fai clic sul link presente nel messaggio per confermare la tua iscrizione a questa mailing list.
+Ti abbiamo inviato una email di conferma. Fai clic sul link presente nel messaggio per confermare la tua iscrizione a questa mailing list.
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -126,11 +126,11 @@ Annulla iscrizione
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Fai clic qui per rimuovere il tuo indirizzo da tutte le e-mail Mozilla
+Fai clic qui per rimuovere il tuo indirizzo da tutte le email Mozilla
 
 
 ;Remove me from all Mozilla emails
-Rimuovimi da tutte le e-mail Mozilla
+Rimuovimi da tutte le email Mozilla
 
 
 ;Save Preferences
@@ -138,7 +138,7 @@ Salva preferenze
 
 
 ;Thanks for updating your email preferences.
-Ti ringraziamo per aver aggiornato le tue preferenze e-mail.
+Ti ringraziamo per aver aggiornato le tue preferenze email.
 
 
 ;You've been unsubscribed.
@@ -150,7 +150,7 @@ Ci dispiace per la tua decisione. Puoi spiegarci le motivazioni della tua scelta
 
 
 ;You send too many emails.
-Mi inviate troppe e-mail.
+Mi inviate troppe email.
 
 
 ;Your content wasn't relevant to me.
@@ -158,11 +158,11 @@ I contenuti non mi interessavano.
 
 
 ;Your email design was too hard to read.
-Il design delle e-mail era troppo difficile da leggere.
+Il design delle email era troppo difficile da leggere.
 
 
 ;I didn't sign up for this.
-Non ho mai chiesto di ricevere queste e-mail.
+Non ho mai chiesto di ricevere queste email.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
@@ -186,7 +186,7 @@ Grazie! Controlla la tua posta per confermare l'iscrizione.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-Riceverai un'e-mail da mozilla@e.mozilla.org per confermare la tua iscrizione, se non trovi questo messaggio controlla i tuoi filtri antispam. Per ricevere la nostra newsletter devi prima confermare l'iscrizione.
+Riceverai un'email da mozilla@e.mozilla.org per confermare la tua iscrizione, se non trovi questo messaggio controlla i tuoi filtri antispam. Per ricevere la nostra newsletter devi prima confermare l'iscrizione.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
