--- a/it/whatsnew.lang
+++ b/it/whatsnew.lang
@@ -2,7 +2,7 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Urrà! Il tuo Firefox è aggiornato.
+Evviva! Il tuo Firefox è aggiornato.
 
 
 ;Your Firefox is out of date.
