updated translation for Firefox 13 whatsnew page for Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105705 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/whatsnew.lang
+++ b/rm/whatsnew.lang
@@ -10,23 +10,23 @@ Tes Firefox n'è betg actual.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-Ord motivs da segirezza recumandain nus dad actualisar a l'<a href="{url}">ultima e meglra versiun</a>.
+Per motivs da segirezza recumandain nus dad actualisar a l'<a href="{url}">ultima e meglra versiun</a>.
 
 
 ;You’re running an unknown version of Firefox.
-Ti lavuras cun ina versiun da Firefox nunenconuschenta.
+Ti dovras ina versiun nunenconuschenta da Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-Ord motivs da segirezza recumandain nus da telechargiar l'<a href="{url}">ultima e meglra versiun</a>.
+Per motivs da segirezza recumandain nus da telechargiar l'<a href="{url}">ultima e meglra versiun</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Midar al proxim pensum<br/>è anc pli spert
+Da midar al proxim pensum<br/>va ussa anc pli spert
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Guarda co che las novas funcziuns da Firefox ta gidan da navigar pli spert e pli effectiv.
+Vesair che las novas funcziuns da Firefox ta gidan a navigar pli spert e pli effectiv.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
@@ -34,15 +34,15 @@ Dapli infurmaziuns davart <a href="{url}">la pagina per novs tabs »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Dapli infurmaziuns davart la <a href="{url}">nova pagina da partenza »</a>
+Dapli infurmaziuns davart <a href="{url}">la nova pagina da partenza »</a>
 
 
 ;Keep in touch
-Resta en contact
+Mantegna il contact
 
 
 ;Keep it moving
-Resta mobil
+Daventa mobil
 
 
 ;Get Firefox » <b>for Android</b>
@@ -50,7 +50,7 @@ Va per Firefox » <b>per Android</b>
 
 
 ;Keep it going
-Resta infurmà
+Ta tegna al current
 
 
 ;Join Mozilla
@@ -58,6 +58,6 @@ Fa part da Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-Il roboter dad Android è vegnì reproducì da material creà e <a href="%s">cundividì da Google</a> ed utilisà tenor ils terms descrits en la <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Il roboter dad Android è vegnì reproducì or da material creà e <a href="%s">cundividì da Google</a> ed utilisà tenor ils terms descrits en la <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
