updated translation for Firefox 13 whatsnew page for Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105706 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/whatsnew.lang
+++ b/rm/whatsnew.lang
@@ -30,15 +30,15 @@ Vesair che las novas funcziuns da Firefox ta gidan a navigar pli spert e pli eff
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Dapli infurmaziuns davart <a href="{url}">la pagina per novs tabs »</a>
+Dapli infurmaziuns davart la <a href="{url}">pagina per novs tabs »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Dapli infurmaziuns davart <a href="{url}">la nova pagina da partenza »</a>
+Dapli infurmaziuns davart la <a href="{url}">nova pagina da partenza »</a>
 
 
 ;Keep in touch
-Mantegna il contact
+Resta infurmà
 
 
 ;Keep it moving
